objects/wkdw__WorkExperienceMembership__c.object
<CustomObject>
    <description>Represents a team membership associated with the work experience of an employee in the Employee Workspace community.</description>
    <fields>
        <fullName>wkdw__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employee associated with this membership.</description>
        <label>Employee</label>
        <referenceTo>Employee</referenceTo>
        <relationshipLabel>Portfolio Item Members</relationshipLabel>
        <relationshipName>Membership_Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkdw__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__WorkExperience__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The portfolio item associated with this membership.</description>
        <label>Portfolio Item</label>
        <referenceTo>wkdw__EmployeeWorkExperience__c</referenceTo>
        <relationshipLabel>Portfolio Item Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Portfolio Item Membership</label>
    <listViews>
        <fullName>wkdw__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Item Memberships</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>